Fill colgate-orange-jello page and add image

--- a/recipes/colgate-orange-jello.html
+++ b/recipes/colgate-orange-jello.html
@@ -8,5 +8,24 @@
 <body>
     <a href="../index.html">Back to Home</a>
     <h1>Colgate-Orange-Jello</h1>
+    <img src="../images/colgate-orange-jello.jpg" alt="Colgate Orange Jello">
+    <h2>Description</h2>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>2 cups orange juice</li>
+                <li>2 envelope unflavored gelatin</li>
+                <li>1 cup boiling water</li>
+                <li>1/2 cup sugar</li>
+                <li>1 tsp citric acid </li>
+                <li>4 tbsp colgate toothpaste</li>
+            </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>In a bowl, mix orange juice and sugar until dissolved.</li>
+                <li>In a separate bowl, dissolve gelatin in boiling water.</li>
+                <li>Combine the gelatin mixture with the orange juice mixture.</li>
+                <li>Add citric acid and colgate toothpaste, stirring well.</li>
+                <li>Pour into molds and refrigerate until set.</li>
+            </ol>    
 </body>
 </html>
