--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <ul>
         <li>
             <a href="recipes/colgate-orange-jello.html">Colgate Orange Jello</a>
+            <a href="recipes/dill-vanilla-jello-parfait.html">Dill Vanilla Jello Parfait</a>
+            <a href="recipes/wasabi-pbj-jello-bar.html">Wasabi PBJ Jello Bar</a>
         </li>
     </ul>
 </body>
