Fix images jpg to png and list view on home page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <body>
     <h1>Odin Recipies</h1>
     <ul>
-        <li>
-            <a href="recipes/colgate-orange-jello.html">Colgate Orange Jello</a>
-            <a href="recipes/dill-vanilla-jello-parfait.html">Dill Vanilla Jello Parfait</a>
-            <a href="recipes/wasabi-pbj-jello-bar.html">Wasabi PBJ Jello Bar</a>
-        </li>
+        <li><a href="recipes/colgate-orange-jello.html">Colgate Orange Jello</a></li>
+        <li><a href="recipes/dill-vanilla-jello-parfait.html">Dill Vanilla Jello Parfait</a></li>    
+        <li><a href="recipes/wasabi-pbj-jello-bar.html">Wasabi PBJ Jello Bar</a></li>    
     </ul>
 </body>
 </html>
