--- a/recipes/dill-vanilla-jello-parfait.html
+++ b/recipes/dill-vanilla-jello-parfait.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Back to Home</a>
-    <h1>Colgate-Orange-Jello</h1>
+    <h1>Dill Vanilla Jello Parfait</h1>
 <img src="../images/dill-vanilla-jello-parfait.png" alt="Dill Vanilla Jello Parfait">
     <h2>Description</h2>
         <h2>Ingredients</h2>
