--- a/recipes/wasabi-pbj-jello-bar.html
+++ b/recipes/wasabi-pbj-jello-bar.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Back to Home</a>
     <h1>Wasabi PBJ Jello Bar</h1>
-<img src="../images/wasabi-pbj-jello-bar.jpg" alt="Wasabi PBJ Jello Bar">
+<img src="../images/wasabi-pbj-jello-bar.png" alt="Wasabi PBJ Jello Bar">
     <h2>Description</h2>
         <h2>Ingredients</h2>
             <ul>
