--- a/recipes/colgate-orange-jello.html
+++ b/recipes/colgate-orange-jello.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Back to Home</a>
     <h1>Colgate-Orange-Jello</h1>
-    <img src="../images/colgate-orange-jello.jpg" alt="Colgate Orange Jello">
+<img src="../images/colgate-orange-jello.png" alt="Colgate Orange Jello">
     <h2>Description</h2>
         <h2>Ingredients</h2>
             <ul>
