fix wasabi pbj jello bar ingredients and steps

--- a/recipes/wasabi-pbj-jello-bar.html
+++ b/recipes/wasabi-pbj-jello-bar.html
@@ -12,21 +12,24 @@
     <h2>Description</h2>
         <h2>Ingredients</h2>
             <ul>
-                <li>1½ cups dill pickle brine (from the jar)</li>
-                <li>1 cup finely diced dill pickles</li>
+                <li>2 envelopes unflavored gelatin</li>
                 <li>1 cup boiling water</li>
-                <li>1 cup vanilla pudding</li>
-                <li>crushed pretzels </li>
-                <li>1 tbsp sugar</li>
+                <li>1-2 tbsp sugar</li>
+                <li>⅓ cup creamy peanut butter</li>
+                <li>2 tbsp warm milk</li>
+                <li>1-2 tsp wasabi paste</li>
+                <li>1 cup grape or strawberry juice</li>
             </ul>
         <h3>Steps</h3>
             <ol>
-                <li>In a bowl, mix dill pickle brine and sugar until dissolved.</li>
-                <li>In a separate bowl, dissolve vanilla pudding in boiling water.</li>
-                <li>Combine the pudding mixture with the dill pickle brine.</li>
-                <li>Add finely diced dill pickles, stirring well.</li>
-                <li>Layer the mixture with crushed pretzels in a parfait glass.</li>
-                <li>Refrigerate until set, then serve chilled.</li>
+                <li>In a bowl, dissolve gelatin in boiling water.</li>
+                <li>Add sugar and stir until dissolved.</li>
+                <li>In a separate bowl, mix peanut butter with warm milk until smooth.</li>
+                <li>Combine the peanut butter mixture with the gelatin mixture.</li>
+                <li>Add wasabi paste to taste, adjusting for heat preference.</li>
+                <li>Pour in grape or strawberry juice and mix well.</li>
+                <li>Pour into molds and refrigerate until set.</li>
+                <li>Once set, cut into bars and serve chilled.</li>
             </ol>    
 </body>
 </html>
